--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sources_non_forked/taglist.vim"]
 	path = sources_non_forked/taglist.vim
 	url = https://github.com/vim-scripts/taglist.vim.git
+[submodule "sources_non_forked/bufexplorer.zip"]
+	path = sources_non_forked/bufexplorer.zip
+	url = https://github.com/vim-scripts/bufexplorer.zip.git
