--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "sources_non_forked/bufexplorer.zip"]
 	path = sources_non_forked/bufexplorer.zip
 	url = https://github.com/vim-scripts/bufexplorer.zip.git
+[submodule "sources_non_forked/mru.vim"]
+	path = sources_non_forked/mru.vim
+	url = https://github.com/vim-scripts/mru.vim.git
