Add nerdtree plugin and map key

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "sources_non_forked/mru.vim"]
 	path = sources_non_forked/mru.vim
 	url = https://github.com/vim-scripts/mru.vim.git
+[submodule "sources_non_forked/nerdtree"]
+	path = sources_non_forked/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
