--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "sources_non_forked/nerdtree"]
 	path = sources_non_forked/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "sources_non_forked/YankRing.vim"]
+	path = sources_non_forked/YankRing.vim
+	url = https://github.com/vim-scripts/YankRing.vim.git
