Ignore changes in git submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,20 @@
 [submodule "sources_non_forked/taglist.vim"]
 	path = sources_non_forked/taglist.vim
 	url = https://github.com/vim-scripts/taglist.vim.git
+    ignore = dirty
 [submodule "sources_non_forked/bufexplorer.zip"]
 	path = sources_non_forked/bufexplorer.zip
 	url = https://github.com/vim-scripts/bufexplorer.zip.git
+    ignore = dirty
 [submodule "sources_non_forked/mru.vim"]
 	path = sources_non_forked/mru.vim
 	url = https://github.com/vim-scripts/mru.vim.git
+    ignore = dirty
 [submodule "sources_non_forked/nerdtree"]
 	path = sources_non_forked/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+    ignore = dirty
 [submodule "sources_non_forked/YankRing.vim"]
 	path = sources_non_forked/YankRing.vim
 	url = https://github.com/vim-scripts/YankRing.vim.git
+    ignore = dirty
